[package]
name = "cronjob"
version = "0.4.17"
authors = ["b.wisman155 <b.wisman155@gmail.com>"]
description = "cronjob library for scheduling your methods"
license = "Apache-2.0"
repository = "https://github.com/TheUberCatman/cronjob"
keywords = ["cron", "schedule"]

[dependencies]
cron = { git = "https://github.com/max-huster/cron" }
chrono = "0.4.19"
